--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Hello and Welcome!!</h1>
+<h4>This site is under construction please visit after sometime</h4>
+    <h4>Thank you for visiting See you soon!!</h4>
