--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Devangsinh Gohil</div>
+      <div class="logo">Devangsinh Gohil update</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
