--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Devangsinh Gohil update</div>
+      <div class="logo">Devangsinh Gohil</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -90,7 +90,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>4+ Months <br />Software Developer</p>
+              <p>1.5+ Years <br />Software Developer</p>
             </div>
             <div class="details-container">
               <img
